force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/SmartIntake_Metadata_Deployment__c.object-meta.xml
<CustomObject>
    <label>SmartIntake Metadata Deployment</label>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SmartIntake Metadata Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>