force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Callback_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Callback_Job_Id__c</fullName>
    <label>Callback Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>