force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Component_Errors__c.field-meta.xml
<CustomField>
    <fullName>Component_Errors__c</fullName>
    <label>Component Errors</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>