force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Component_Key__c.field-meta.xml
<CustomField>
    <fullName>Component_Key__c</fullName>
    <label>Component Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>