force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Components_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Components_Deployed__c</fullName>
    <label>Components Deployed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>