force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Deploy_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Created_Date__c</fullName>
    <label>Deploy Created Date</label>
    <type>DateTime</type>
</CustomField>