force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Deployment_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Deployment Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>