force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Done__c.field-meta.xml
<CustomField>
    <fullName>Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Done</label>
    <type>Checkbox</type>
</CustomField>