force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Error_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Status_Code__c</fullName>
    <label>Error Status Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>