force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <label>Record Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>