force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Result_JSON__c.field-meta.xml
<CustomField>
    <fullName>Result_JSON__c</fullName>
    <label>Result JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>