force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/State_Detail__c.field-meta.xml
<CustomField>
    <fullName>State_Detail__c</fullName>
    <label>State Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>