force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Test_Errors__c.field-meta.xml
<CustomField>
    <fullName>Test_Errors__c</fullName>
    <label>Test Errors</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>