force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Tests_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tests_Completed__c</fullName>
    <label>Tests Completed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>