force-app/main/default/objects/SmartIntake_Metadata_Deployment__c/fields/Tests_Total__c.field-meta.xml
<CustomField>
    <fullName>Tests_Total__c</fullName>
    <label>Tests Total</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>